--- a/src/components/FriendCard/FriendCard.css
+++ b/src/components/FriendCard/FriendCard.css
@@ -5,7 +5,7 @@
   height: 200px;
   margin: 1rem;
   position: relative;
-  box-shadow: 1px 1px darkgrey;
+  box-shadow: 2px 2px orange;
   text-align: left;
 }
 
@@ -16,7 +16,8 @@
   background:rgb(0, 24, 41);
 }
 .card > .img-container > img {
-  width: 60%
+  width: 100%;
+  
 }
 
 .card > .content {
@@ -24,18 +25,5 @@
   text-align: center;
   color: white;
   background: darkgrey;
-  box-shadow: 1px 1px darkgrey;
-}
-
-.card > .remove {
-  color: #ff1744;
-  font-size: 48px;
-  position: absolute;
-  top: -20px;
-  right: 5px;
-  cursor: pointer;
-}
-
-.card > .remove:hover {
-  color: #d50000;
+  box-shadow: 2px 2px orange;
 }
