--- a/src/components/FriendCard/FriendCard.css
+++ b/src/components/FriendCard/FriendCard.css
@@ -1,12 +1,14 @@
 .card {
   background: #fff;
-  border-radius: 2px;
   width: 200px;
   height: 200px;
   margin: 1rem;
   position: relative;
   box-shadow: 2px 2px orange;
   text-align: left;
+  border-radius: 20px;
+  border: 4px solid darkorange;
+  overflow: hidden;
 }
 
 .card > .img-container {
@@ -17,7 +19,6 @@
 }
 .card > .img-container > img {
   width: 100%;
-  
 }
 
 .card > .content {
